getMore is incorrectly counted in system.buckets metrics

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc4
    • Affects Version/s: 8.3 Required
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2026-03-30
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      getMore command is counted incorrectly in system.buckets metrics. The command should be white listed alongside other chunk ddl commands because it's not necessarily coming from the user, which means it may incorrectly increment the system.buckets metrics.

      We need to backport SERVER-121850 + add getMore to the list.

      getMore was fixed in SERVER-120476 but we decided to not backport it to 8.3, so the workaround for 8.3 is to skip counting getMore commands that are targeting system.buckets.

            Assignee:
            Meryama Nadim
            Reporter:
            Meryama Nadim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: