SERVER-122617 Exclude getMore and chunk ddl commands from being counted in system.buckets metrics (#50505)

GitOrigin-RevId: 7e7fd369a07816399d039645a14af2b7aeab083a